# src/Backlog.App/src/app/@api/models/get-current-user-response.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+import { UserDto } from './user-dto';
+export interface GetCurrentUserResponse {
+  user?: UserDto;
+}
